# thermoelasticity_fem

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sandwich.msh  sandwich.txt  sandwich2.txt
examples/: example_1.py  example_UQ_1.py  example_steadystate.py  example_transient.py  example_transient_1.py  example_transient_2.py  example_transient_3.py  main.py
src/thermoelasticity_fem/: elements.py  generators.py  materials.py  mesh.py  model.py  plots.py  solvers.py
